--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@qi/map": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-date-picker": "^9.2.1",
-    "react-datetime-picker": "^4.2.1",
+    "react-datetime-picker": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
@@ -20,7 +21,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ol": "^6.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
